--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,13 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">testLoginSuite</th></tr>
-<tr><td><a href="#t0">loginTest</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">4,834</td><td></td><td></td></tr>
+<tr><td><a href="#t0">loginTest</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">19,557</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">testLoginSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">loginTest &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">Jarvis.test.cases.LoginTest</td><td><a href="#m0">loginTest</a></td><td rowspan="1">1556371618491</td><td rowspan="1">1</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">testLoginSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">loginTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Jarvis.test.cases.LoginTest</td><td><a href="#m0">loginTest</a></td><td rowspan="1">1556779494908</td><td rowspan="1">14259</td></tr></tbody>
 </table>
-<h2>loginTest</h2><h3 id="m0">Jarvis.test.cases.LoginTest#loginTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>yangxr</td><td>123456</td></tr><tr><th colspan="2">Exception</th></tr><tr><td colspan="2"><div class="stacktrace">java.lang.NullPointerException
-	at Jarvis.test.page.LoginPage.login(LoginPage.java:54)
-	at Jarvis.test.cases.LoginTest.loginTest(LoginTest.java:34)
-... Removed 24 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>loginTest</h2><h3 id="m0">Jarvis.test.cases.LoginTest#loginTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>yangxr</td><td>123456</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
