--- a/test-output/index.html
+++ b/test-output/index.html
@@ -24,7 +24,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -38,7 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-testLoginSuite">
-              <span class="suite-name border-failed">testLoginSuite</span>
+              <span class="suite-name border-passed">testLoginSuite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -91,21 +91,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method, 1 failed,   </span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-testLoginSuite" class="hide-methods failed suite-testLoginSuite"> (hide)</a> <!-- hide-methods failed suite-testLoginSuite -->
-                      <a href="#" panel-name="suite-testLoginSuite" class="show-methods failed suite-testLoginSuite"> (show)</a> <!-- show-methods failed suite-testLoginSuite -->
+                    <span class="method-list-title passed">Passed methods</span>
+                    <span class="show-or-hide-methods passed">
+                      <a href="#" panel-name="suite-testLoginSuite" class="hide-methods passed suite-testLoginSuite"> (hide)</a> <!-- hide-methods passed suite-testLoginSuite -->
+                      <a href="#" panel-name="suite-testLoginSuite" class="show-methods passed suite-testLoginSuite"> (show)</a> <!-- show-methods passed suite-testLoginSuite -->
                     </span>
-                    <div class="method-list-content failed suite-testLoginSuite">
+                    <div class="method-list-content passed suite-testLoginSuite">
                       <span>
-                        <img width="3%" src="failed.png"/>
+                        <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-testLoginSuite" title="Jarvis.test.cases.LoginTest" hash-for-method="loginTest(yangxr, 123456)">loginTest(yangxr, 123456)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content failed suite-testLoginSuite -->
+                    </div> <!-- method-list-content passed suite-testLoginSuite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -117,9 +117,9 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-testLoginSuite" class="panel testLoginSuite">
-          <div class="suite-testLoginSuite-class-failed">
+          <div class="suite-testLoginSuite-class-passed">
             <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
+              <img src="passed.png"/>
               <span class="class-name">Jarvis.test.cases.LoginTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -129,15 +129,10 @@
                   </a> <!-- loginTest(yangxr, 123456) -->
                   <span class="method-name">loginTest</span>
                   <span class="parameters">(yangxr, 123456)</span>
-                  <div class="stack-trace">java.lang.NullPointerException
-	at Jarvis.test.page.LoginPage.login(LoginPage.java:54)
-	at Jarvis.test.cases.LoginTest.loginTest(LoginTest.java:34)
-... Removed 24 stack frames
-</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-testLoginSuite-class-failed -->
+          </div> <!-- suite-testLoginSuite-class-passed -->
         </div> <!-- panel testLoginSuite -->
         <div panel-name="test-xml-testLoginSuite" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -155,7 +150,6 @@
     &lt;parameter name=&quot;password&quot; value=&quot;123456&quot;/&gt;
     &lt;parameter name=&quot;username&quot; value=&quot;yangxr&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;Jarvis.test.util.TestSystemInfo&quot;/&gt;
       &lt;class name=&quot;Jarvis.test.cases.LoginTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- loginTest --&gt;
@@ -170,7 +164,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">loginTest (2 classes)</span>
+                <span class="test-name">loginTest (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -200,12 +194,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'loginTest')
 data.setCell(0, 2, 'Jarvis.test.cases.LoginTest')
-data.setCell(0, 3, 1);
+data.setCell(0, 3, 14259);
 window.suiteTableData['testLoginSuite']= { tableData: data, tableDiv: 'times-div-testLoginSuite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 ms</span>
+              <span class="suite-total-time">Total running time: 14 seconds</span>
               <div id="times-div-testLoginSuite">
               </div> <!-- times-div-testLoginSuite -->
             </div> <!-- times-div -->
@@ -237,14 +231,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
                 <span class="method-name">loginTest(yangxr, 123456)</span>
-                <span class="method-start">3902 ms</span>
+                <span class="method-start">4172 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">3906 ms</span>
+                <span class="method-start">18435 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
