--- a/test-output/old/testLoginSuite/methods-alphabetical.html
+++ b/test-output/old/testLoginSuite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>testLoginSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c1af68">  <td>19/04/27 21:26:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.lang.String, java.lang.String)[pri:0, instance:Jarvis.test.cases.LoginTest@3498ed]">loginTest</td> 
-  <td>main@922151033</td>   <td></td> </tr>
-<tr bgcolor="6a63af">  <td>19/04/27 21:26:54</td>   <td>-3897</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:Jarvis.test.cases.LoginTest@3498ed]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
-<tr bgcolor="6a63af">  <td>19/04/27 21:26:58</td>   <td>4</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:Jarvis.test.cases.LoginTest@3498ed]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@922151033</td>   <td></td> </tr>
+<tr bgcolor="6de788">  <td>19/05/02 14:44:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.lang.String, java.lang.String)[pri:0, instance:Jarvis.test.cases.LoginTest@e1de817]">loginTest</td> 
+  <td>main@1768792843</td>   <td></td> </tr>
+<tr bgcolor="d99988">  <td>19/05/02 14:44:50</td>   <td>-4030</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:Jarvis.test.cases.LoginTest@e1de817]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1768792843</td>   <td></td> </tr>
+<tr bgcolor="d99988">  <td>19/05/02 14:45:09</td>   <td>14263</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:Jarvis.test.cases.LoginTest@e1de817]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1768792843</td>   <td></td> </tr>
 </table>
